package api

import (
	//	"database/sql"
	//	"errors"
	"database/sql"
	"errors"
	"net/http"
	"time"

	"github.com/gin-gonic/gin"
	"github.com/kamalbowselvam/chaintask/db"
	"github.com/kamalbowselvam/chaintask/domain"
	"github.com/kamalbowselvam/chaintask/util"
	"github.com/lib/pq"
)

type createUserRequest struct {
	Username string `json:"username" binding:"required,alphanum"`
	Password string `json:"password" binding:"required,min=6"`
	FullName string `json:"full_name" binding:"required"`
	Email    string `json:"email" binding:"required,email"`
	Role     string `json:"role" binding:"required"`
}

type userResponse struct {
	Username          string    `json:"username"`
	FullName          string    `json:"full_name"`
	Email             string    `json:"email"`
	PasswordChangedAt time.Time `json:"password_changed_at"`
	CreatedAt         time.Time `json:"created_at"`
	Role              int64    `json:"role"`
}



func newUserResponse(user domain.User) userResponse {
	return userResponse{
		Username:          user.Username,
		FullName:          user.FullName,
		Email:             user.Email,
		PasswordChangedAt: user.PasswordChangedAt,
		CreatedAt:         user.CreatedAt,
		Role: util.ROLES_INVERT[user.Role],
	}
}

// CreateUser godoc
// @Summary      Create a User
// @Description  Create a user
// @Tags         users
// @Accept       json
// @Produce      json
// @Param        request body createUserRequest true "user creation parameters"
// @Success      200  {object}  domain.User
// @Failure      400  {object} error
// @Failure      404  {object} error
// @Failure      500  {object} error
// @Router       /users/ [post]
func (hdlr *HttpHandler) CreateUser(ctx *gin.Context) {
	var req createUserRequest
	if err := ctx.ShouldBindJSON(&req); err != nil {
		ctx.JSON(http.StatusBadRequest, util.ErrorResponse(err))
		return
	}

	hashedPassword, err := util.HashPassword(req.Password)
	if err != nil {
		ctx.JSON(http.StatusInternalServerError, util.ErrorResponse(err))
		return
	}

	arg := db.CreateUserParams{
		Username:       req.Username,
		HashedPassword: hashedPassword,
		FullName:       req.FullName,
		Email:          req.Email,
		Role:           req.Role,
	}


	user, err := hdlr.taskService.CreateUser(ctx, arg)
	if err != nil {
		if pqErr, ok := err.(*pq.Error); ok {
			switch pqErr.Code.Name(){
			case "unique_violation":
					ctx.JSON(http.StatusForbidden, util.ErrorResponse(err))
					return
			}
		}
		ctx.JSON(http.StatusInternalServerError, util.ErrorResponse(err))
		return
	}

	rsp := newUserResponse(user)
	ctx.JSON(http.StatusOK, rsp)
}


type loginUserRequest struct {
	Username string `json:"username" binding:"required,alphanum"`
	Password string `json:"password" binding:"required,min=6"`
}

type loginUserResponse struct {
	AccessToken           string       `json:"access_token"`
	User                  userResponse `json:"user"`
}

// LoginUser godoc
// @Summary      Logs an user in
// @Description  Logs an user in
// @Tags         users
// @Accept       json
// @Produce      json
// @Param        request body createUserRequest true "user creation parameters"
// @Success      200  {object}  loginUserResponse
// @Failure      400  {object} error
// @Failure      404  {object} error
// @Failure      500  {object} error
// @Router       /users/login [post]
func (hdlr *HttpHandler) LoginUser(ctx *gin.Context){


	var req loginUserRequest

	if err := ctx.ShouldBindJSON(&req) ; err != nil {
		ctx.JSON(http.StatusBadRequest, util.ErrorResponse(err))
		return
	}


	user, err := hdlr.taskService.GetUser(ctx,req.Username)

	if err != nil {
		if errors.Is(err, sql.ErrNoRows){
			ctx.JSON(http.StatusNotFound, util.ErrorResponse(err))
			return
		}
		ctx.JSON(http.StatusInternalServerError, util.ErrorResponse(err))
		
	}

	err = util.CheckPassword(req.Password, user.HashedPassword)
	if err != nil {
		ctx.JSON(http.StatusUnauthorized, util.ErrorResponse(err))
		return
	}

	accessToken, _, err := hdlr.tokenMaker.CreateToken(
		user.Username,
		util.ROLES_INVERT[user.Role],
		hdlr.config.AccessTokenDuration,
	)

	if err != nil { 
		ctx.JSON(http.StatusInternalServerError, util.ErrorResponse(err))
		return
	}

	rsp := loginUserResponse{
		AccessToken: accessToken,
		User: newUserResponse(user),
	}


	ctx.JSON(http.StatusOK, rsp)

}
